Fix overlap of show html button & description

--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -372,38 +372,38 @@ $LAYOUT
     margin: 5px;
     font-size: 0.75em; }
   .pl-sub-pattern .pl-sub-pattern-markup {
-    border-top: 1px solid #ebebeb;
     padding-top: 10px; }
   .pl-sub-pattern .pl-sub-pattern-sample {
-    margin-bottom: 10px;
     position: relative; }
     .pl-sub-pattern .pl-sub-pattern-sample .pl-sub-pattern-sample-toggle-controls {
       color: #737373;
       font-size: 0.8125em;
       text-transform: uppercase;
       letter-spacing: 1px;
-      border: 1px solid #ebebeb;
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      padding: 5px;
-      height: 24px;
       display: inline-block;
       -moz-user-select: none;
       -webkit-user-select: none;
-      -ms-user-select: none; }
-      @media screen and (min-width: 30em)  {
-        .pl-sub-pattern .pl-sub-pattern-sample .pl-sub-pattern-sample-toggle-controls {
-          position: absolute;
-          right: 0;
-          top: -24px; } }
+      -ms-user-select: none;
+      border-bottom: 1px solid #ebebeb;
+      width: 100%;
+      position: relative;
+      top: 0; }
+      .pl-sub-pattern .pl-sub-pattern-sample .pl-sub-pattern-sample-toggle-controls span {
+        border: 1px solid #ebebeb;
+        border-bottom: 0px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        padding: 5px;
+        position: absolute;
+        bottom: 0;
+        right: 0; }
       .pl-sub-pattern .pl-sub-pattern-sample .pl-sub-pattern-sample-toggle-controls:hover {
         cursor: pointer;
         color: #123d5e; }
       .pl-sub-pattern .pl-sub-pattern-sample .pl-sub-pattern-sample-toggle-controls .hide {
         display: none; }
     .pl-sub-pattern .pl-sub-pattern-sample .pl-sub-pattern-sample-toggle-target {
-      display: none;
-      margin-top: 10px; }
+      display: none; }
     .pl-sub-pattern .pl-sub-pattern-sample.visible .pl-sub-pattern-sample-toggle-controls .show {
       display: none; }
     .pl-sub-pattern .pl-sub-pattern-sample.visible .pl-sub-pattern-sample-toggle-controls .hide {
